# learning-cxx

./: .envrc  .envrc.local.tpl  .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  learn.md  upload_tmp_file  vcpkg copy.json  vcpkg-configuration.json  vcpkg.json  version.h  version.h.in  wt.sh
CPM_modules/: FindCCCL.cmake
apps/: CMakeLists.txt  boost_relay.cpp  http_server_async.cpp  proxy-server.cpp
apps/fixtures/: cert.pem  dh.pem  key.pem
apps/http_server_async_include/: connection_session.hpp  dic_task.hpp  handler_file.hpp  handler_tasks.hpp  http_client_async.hpp  http_copier.h  http_handler.hpp  http_handler_util.hpp  http_proxy_server_side.hpp  http_server_async.hpp  http_session.hpp  json_util.hpp  models.hpp  server_async.h  server_async_util.h  server_certificate.hpp  server_settings.hpp  socket_copier.h  socket_session.hpp  string_util.hpp
asio-client/: CMakeLists.txt
asio-server/: CMakeLists.txt  server-async-simple.cpp  server-async-simple.h  server-async.cpp  server-async.h  ssh-server.cpp  ssl-server.cpp
bm/: CMakeLists.txt  first_benchmark.cpp
cmake/: enableomp.cmake
cmake/Modules/: FindPAM.cmake
gtest/: CMakeLists.txt  client_async_test.cpp  cmake_usage_test.cpp  const_test.cpp  member_pointer_test.cpp  modify_by_pointer_test.cpp  pointer_explained_test.cpp  polymorphisam_test.cpp  reference_test.cpp  server_async_simple_test.cpp  server_async_test.cpp  shell_test.cpp  string_all_test.cpp  wf_client.cpp  wf_test.cpp
my-ports/benchmark/: fix_qnx.patch  portfile.cmake
my-ports/opencv4/: portfile.cmake
my-ports/workflow/: portfile.cmake  vcpkg.json
my-triplets/: x64-mingw-static-openexr-off.cmake  x64-windows-cuda.cmake
pam/: CMakeLists.txt  cpam.h  cpam_auth.cpp
scripts/: login_alert.sh
to-delete/: server-async copy.cpp.bak
workflow-taste/: CMakeLists.txt  readme.md
workflow-taste/src/: echo.cpp
